# Lexecon-core

./: CLAUDE.md  README.md  pyproject.toml
docs/: ENTERPRISE.md
src/lexecon_core/: __init__.py
src/lexecon_core/api/: server.py
src/lexecon_core/examples/: quickstart.py
src/lexecon_core/ledger/: __init__.py  chain.py
src/lexecon_core/policy/: engine.py  relations.py  terms.py
