[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexecon-core"
version = "0.1.0"
description = "The governance control plane for AI decisions - Core edition"
readme = "README.md"
authors = [
    { name = "Lexicoding Systems", email = "contact@lexecon.ai" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai-governance", "policy-engine", "compliance", "audit", "ledger"]

dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
server = [
    "uvicorn[standard]>=0.27.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://lexecon.ai"
Documentation = "https://docs.lexecon.ai/core"
Repository = "https://github.com/Lexicoding-systems/lexecon-core"
Enterprise = "https://lexecon.ai/enterprise"

[project.scripts]
lexecon-core = "lexecon_core.api.server:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
